centralize pom configuration